fix scrollbars

--- a/app/styles/components/scrollbars.less
+++ b/app/styles/components/scrollbars.less
@@ -1,29 +1,34 @@
 .scrollbar {
     & > div:nth-child(1) {}
     & > div:nth-child(2) {
-        display: none;
-        & > div {
-            background-color: rgba(0, 0, 0, 0);
-            transition: background-color .3s;
-        }
+        opacity: 0;
+        transition: opacity .3s;
+        // & > div {
+        //     background-color: rgba(0, 0, 0, 0);
+        //     transition: background-color .3s;
+        // }
     }
     & > div:nth-child(3) {
-        display: none;
-        & > div {
-            background-color: rgba(0, 0, 0, 0);
-            transition: background-color .3s;
-        }
+        opacity: 0;
+        transition: opacity .3s;
+        // & > div {
+        //     background-color: rgba(0, 0, 0, 0);
+        //     transition: background-color .3s;
+        // }
     }
 
     &:hover {
         & > div:nth-child(2) {
-            display: block;
+            opacity: 1;
+            // & > div {
+            //     background-color: rgba(0, 0, 0, 0.2);
+            // }
         }
         & > div:nth-child(3) {
-            display: block;
-            & > div {
-                background-color: rgba(0, 0, 0, 0.2);
-            }
+            opacity: 1;
+            // & > div {
+            //     background-color: rgba(0, 0, 0, 0.2);
+            // }
         }
     }
 }
