--- a/app/styles/section/trading.less
+++ b/app/styles/section/trading.less
@@ -193,6 +193,12 @@
             padding-left: 10px;
             padding-right: 0;
             text-align: left;
+
+            &:nth-child(1) {width: 20%;}
+            &:nth-child(2) {width: 18%;}
+            &:nth-child(3) {width: 20%;}
+            &:nth-child(4) {width: 22%;}
+            &:nth-child(5) {width: 20%;}
         }
     }
 }
@@ -283,6 +289,12 @@
             padding-left: 10px;
             padding-right: 0;
             text-align: left;
+
+            &:nth-child(1) {width: 20%;}
+            &:nth-child(2) {width: 18%;}
+            &:nth-child(3) {width: 20%;}
+            &:nth-child(4) {width: 22%;}
+            &:nth-child(5) {width: 20%;}
         }
     }
 }
